--- a/notebooks/part1.ipynb
+++ b/notebooks/part1.ipynb
@@ -1,78 +1,147 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "initial-minute",
-   "metadata": {},
-   "source": [
-    "# Create your (free!) Neo4j Sandbox at https://dev.neo4j.com/sandbox"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "hairy-ability",
-   "metadata": {},
-   "source": [
-    "## Be sure to install the official Neo4j driver via `pip install neo4j`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "celtic-terry",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neo4j import GraphDatabase"
+    "from neo4j import GraphDatabase\n",
+    "from py2neo import Graph, Node, Relationship\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "suspected-norwegian",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uri = \"bolt://3.237.66.105:7687\"\n",
-    "pwd = \"makeup-clips-tones\"\n",
-    "\n",
-    "driver = GraphDatabase.driver(uri, auth=(\"neo4j\", pwd))"
+    "uri = \"http://localhost:7474\"\n",
+    "pwd = \"root123\"\n",
+    "graph = Graph(uri, auth=(\"neo4j\", pwd), name=\"dbc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cheap-perth",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr><th>COUNT(n)</th></tr><tr><td style=\"text-align:right\">4</td></tr></table>"
+      ],
+      "text/plain": [
+       " COUNT(n) \n",
+       "----------\n",
+       "        4 "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.run(\"MATCH (n) RETURN COUNT(n)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"MATCH (n) RETURN COUNT(n)\""
+    "f=open(\"/Volumes/Seagate Backup Plus Drive/ML Data/DBC/materialer-used2.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "recorded-coating",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open(\"/tmp/mm.json\",\"r\")\n",
+    "data=json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(data[0])\n",
+    "q=\"CREATE (ElseH:creator {name:'Else Holgersen'}) CREATE (Fljteogmalebogen:sheetmusic {title:'Fløjte og malebogen', subjectterm:['78.46301', 'Vokalmusik for børn']}),(ElseH)-[:CREATED]->(Fljteogmalebogen)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "(No data)"
+      ],
+      "text/plain": [
+       "(No data)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.run(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dat in data:\n",
+    "    try:\n",
+    "        print((dat['type']))\n",
+    "    except:\n",
+    "        print(\"Error on {}\".format(dat))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2642\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
-    "with driver.session() as session:\n",
-    "    result = session.run(query)\n",
-    "    print(result.single()[\"COUNT(n)\"])"
+    "print(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "similar-nelson",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -94,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
